--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^10.3.8",
     "@nestjs/config": "^3.2.2",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/core": "^10.3.8",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@types/multer": "^1.4.11",
     "csv-parser": "^3.0.0",
     "csv-writer": "^1.6.0",
+    "imap-simple": "^5.1.0",
     "json2csv": "^6.0.0-alpha.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
